--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,14 @@ dependencies {
 
     compile "com.jakewharton:butterknife:$butterKnifeVersion"
     kapt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
-    compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
-    compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
-    compile "com.jakewharton.rxbinding2:rxbinding:$rxBindingsVersion"
     compile "com.jakewharton.timber:timber:$timberVersion"
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
     compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
+
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.1'
 
     testCompile "junit:junit:$junitVersion"
 
