--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,19 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
 
     repositories {
+        google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 
     ext {
-        kotlinVersion = "1.1.3"
-        agpVersion = "2.3.3"
+        kotlinVersion = "1.1.51"
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$agpVersion"
+        classpath "com.android.tools.build:gradle:3.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -25,29 +21,27 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
+        maven { url "https://jitpack.io" }
     }
 
     ext {
         minSdkVrs = 19
-        sdkVersion = 25
-        buildToolsVrs = "25.0.3"
-        supportLibVersion = "25.4.0"
+        sdkVersion = 27
+        buildToolsVrs = "27.0.0"
+        supportLibVersion = "27.0.0"
 
-        butterKnifeVersion = "8.6.0"
-        okhttpVersion = "3.8.1"
-        retrofitVersion = "2.2.0"
-        timberVersion = "4.5.1"
-        rxJavaVersion = "2.1.1"
+        butterKnifeVersion = "8.8.1"
+        okhttpVersion = "3.9.0"
+        retrofitVersion = "2.3.0"
+        timberVersion = "4.6.0"
+        rxJavaVersion = "2.1.6"
         rxAndroidVersion = "2.0.1"
         rxBindingsVersion = "2.0.0"
 
-        espressoVersion = "2.2.2"
+        espressoVersion = "3.0.1"
         junitVersion = "4.12"
-        mockitoVersion = "2.8.52"
-        truthVersion = "0.34"
+        mockitoVersion = "2.11.0"
+        truthVersion = "0.36"
     }
 }
 
